# trs-monitoring-2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  logging.py  main.py
src/api/: __init__.py  archive.py  utils.py
src/api/backend/: __init__.py  client.py  schemas.py
src/api/transcription/: client.py  schemas.py
src/source_processing/: constants.py  service.py  utils.py
